manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servlet-sample
  name: servlet-sample
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: servlet-sample
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servlet-sample
  name: admin-console
spec:
  type: NodePort
  ports:
    - name: https
      port: 9043
      targetPort: 9043
  selector:
    app: servlet-sample
