manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: servlet-sample
  name: servlet-sample
spec:
  path:
    "/SampleProgrammatic"
  port:
    targetPort: http
  to:
    kind: Service
    name: servlet-sample
    weight: 100
